--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -32,8 +32,6 @@
       height: 609px;
     }
 
-   
-
     @media screen and (min-width: 1200px) {
       min-width: 528px;
       min-height: 581px;
@@ -46,8 +44,6 @@
     letter-spacing: 0.03em;
     color: $primary-text-color;
     margin-bottom: 12px;
-
-   
   }
 
   .backdrop__button-close {
@@ -110,6 +106,7 @@
 
   .modal__item {
     margin-bottom: 4px;
+    display: block;
   }
 
   .modal__icon {
